# llm-as-code

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
lac/: adapter.py  compose_schema.json  engine.py  fsjail.py
