[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lac-engine"
version = "0.1.0"
description = "LaC (LLM as Code) - reference engine. Declarative behavior for LLM apps: law in files, perimeter in code."
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.scripts]
lac = "lac.engine:main"

[tool.hatch.build.targets.wheel]
packages = ["lac"]
